Getting ready to apply new configuration